add images to 34

--- a/content/6-interventions/34.md
+++ b/content/6-interventions/34.md
@@ -26,7 +26,9 @@ Leaving apart the most recent and better-known years, the first period I want to
 
 At the end of the conflict, it proved necessary to repair the damage caused by inappropriate and often inclement conservation conditions. Lists were drawn up indicating urgencies and priorities for restoration. Many works are mentioned several times in these lists, perhaps because they are still awaiting intervention. Documents requesting estimates and assessments for the acquisition of materials provide us with information on the techniques employed in these interventions.
 
-Among the most active restorers were without doubt the Podio family, originally from Bologna. We have at least a dozen documented linings executed by them, and most of these date from the 1950s ([**fig. 34.1**](fig-34-1)) and are still effective as supports for the paintings.[^4] In their estimates, the Podio often indicate hemp as the lining textile used, but more importantly we note that they often repeated the operation they had just concluded with a second lining that involved a double or even a triple layer of glue paste, which would be filtered through the weave and the excess removed through the application of great pressure; the ironing operation, on the other hand, was not repeated.[^5] The result was a lining of great rigidity, and of high susceptibility to changes in humidity and temperature because of the amount of glue on the reverse.
+Among the most active restorers were without doubt the Podio family, originally from Bologna. We have at least a dozen documented linings executed by them, and most of these date from the 1950s ([fig. 34.1](#fig-34-1)) and are still effective as supports for the paintings.[^4] In their estimates, the Podio often indicate hemp as the lining textile used, but more importantly we note that they often repeated the operation they had just concluded with a second lining that involved a double or even a triple layer of glue paste, which would be filtered through the weave and the excess removed through the application of great pressure; the ironing operation, on the other hand, was not repeated.[^5] The result was a lining of great rigidity, and of high susceptibility to changes in humidity and temperature because of the amount of glue on the reverse.
+
+{% figuregroup '2' 'fig-34-1-a, fig-34-1-b' %}
 
 That these linings should still be in place and largely effective is all the more notable. However, it is true that the environment of our galleries is essentially a dry one, with a rather low RH of around 40%—and therefore suitable for the preservation of this kind of restoration. In this context I should mention a curious estimate given by D. Podio for work to be carried out on a *Virgin and Child* attributed to Raphael, in the Accademia di San Luca. Having recognized it as a transfer, he proposed an initial lining on a hemp canvas, with the consequent ironing and filling, and then a second lining using not less than three hemp canvases and another ironing: “This would give back to the painting the appearance of a painting on wood.” His aim was therefore a rigidity that was not only functional but also aesthetic.[^6]
 
@@ -38,11 +40,15 @@ Restoration practices in the various private collections are less well known. Ag
 
 In the National Gallery, we have few examples of linings dating back to the nineteenth century, even though the period is rather well known through the historical research cited. Such documentation tends to be of a more theorical (almost sterile) nature, and we are unable to match it with the technical evidence. Just a few linings from the nineteenth century, or even the earlier part of the twentieth, are preserved—a result of the general use of greater quantities of glue paste and of coarser and heavier canvases for linings, which has made them more fragile and more susceptible to changes in relative humidity and temperature ([[Mecklenburg 2007]]; [[CESMAR7 2008]]; [[Ciatti and Signorini 2006]]; [[Roche 2003]]) than the earlier linings described in some detail in later sections of this paper.
 
-One example of a painting with a nineteenth-century lining is the *Glory of Saint Ignatius* ([**fig. 34.2**](fig-34-2))*,* by A. Pozzo (inventory 1426). The restoration is dated 1884 on the stretcher, the canvas is of a heavy and tightly woven, herringbone weave, and the adhesive rich in animal glue. On the canvas are marks that seem to be the result of burns from the application of hot irons. The stretcher is pine, with crossbars and keys, but it is essentially inadequate; clearly evident on the picture surface are the stretcher marks, as well as flattening of the paint. The inscriptions that accompany the restoration, on the stretcher, are grammatically incorrect, once again relegating the restorers to the “mechanical,” uneducated sphere. Another *bozzetto* for Pozzo’s tromp l’oeil dome of the church of Saint Ignazio (inventory 1425), has very similar characteristics and was also lined in 1884, so one can infer that it was carried out by the same restorer.
+One example of a painting with a nineteenth-century lining is the *Glory of Saint Ignatius* ([fig. 34.2](#fig-34-2))*,* by A. Pozzo (inventory 1426). The restoration is dated 1884 on the stretcher, the canvas is of a heavy and tightly woven, herringbone weave, and the adhesive rich in animal glue. On the canvas are marks that seem to be the result of burns from the application of hot irons. The stretcher is pine, with crossbars and keys, but it is essentially inadequate; clearly evident on the picture surface are the stretcher marks, as well as flattening of the paint. The inscriptions that accompany the restoration, on the stretcher, are grammatically incorrect, once again relegating the restorers to the “mechanical,” uneducated sphere. Another *bozzetto* for Pozzo’s tromp l’oeil dome of the church of Saint Ignazio (inventory 1425), has very similar characteristics and was also lined in 1884, so one can infer that it was carried out by the same restorer.
+
+{% figure 'fig-34-2' %}
 
 Many restorations coincided with the acquisition of the painting, for example, Giordano Luca’s *Ritratto di capomasteo (Cratete)* (inventory 1254), lined by Luigi Bartolucci in 1898. The stretcher may have been preserved from a previous intervention but adapted to make place for keys. The lining canvas is coarse and thick, stained, and has a large seam*.* It is interesting to compare this canvas to those in use by painters at the same time: the same kind of canvas was used for Horace Vernet’s *Portrait of Filippo Agricola*, painted in the 1820s and never lined.
 
-During the nineteenth century (although less than during the eighteenth century), we find evidence of a desire for minimal intervention, both in mending of tears and in strip-linings. It was also Bartolucci who carried out the 1909 strip-lining of Cavallino’s *Saint Peter and the Centurion* (inventory 1485)*,* for which (according to his report) he “consolidated the old lining,” thus wisely preserving a lining dating to the end of the eighteenth century that was still functional. Another example is Guido Reni’s *Magdalen* (inventory1437) ([**fig. 34.3**](fig-34-3)), which was never lined but has a very old strip-lining, surviving at least in the upper section.[^7]
+During the nineteenth century (although less than during the eighteenth century), we find evidence of a desire for minimal intervention, both in mending of tears and in strip-linings. It was also Bartolucci who carried out the 1909 strip-lining of Cavallino’s *Saint Peter and the Centurion* (inventory 1485)*,* for which (according to his report) he “consolidated the old lining,” thus wisely preserving a lining dating to the end of the eighteenth century that was still functional. Another example is Guido Reni’s *Magdalen* (inventory1437) ([fig. 34.3](#fig-34-3)), which was never lined but has a very old strip-lining, surviving at least in the upper section.[^7]
+
+{% figure 'fig-34-3' %}
 
 Proceeding backward through the historical stages, and at the same time reconstructing the techniques, we arrive at the turn of the eighteenth century, at a moment when Rome was an important center in the history of restoration. It is not by chance that this was the case. Rome had a very high concentration of private collections, and the first public ones were coming into being. Nor was it by chance that this occurred almost two centuries from the initial diffusion of canvas as a painting support. The central position of Rome for restoration history is highlighted by the fact that it was the place of origin of many restorers, who were responsible for the spread of Roman restoration techniques. In 1787, Andres left for Naples, and 10 years later Sampieri left to join Puccini in Florence, although the two had already met in Rome ([[Incerpi 2011]]; [[Mazzi 2007]]). A few decades later, in 1826, Palmaroli also left, to go to Dresden.
 
@@ -58,7 +64,9 @@ A second group includes older linings, which we can date to the first half of th
 
 ### The Prestretching of the Lining Canvas
 
-Upon closer observation of paintings in the collection, I deduced that the lining canvas was stretched by attaching it to the strainer with sprigs or brads. The lining would then be wetted to slacken the canvas, which could then be made taut again with the same sprigs, which at this point would be hammered back and bent to secure the canvas ([**fig. 34.4**](fig-34-4)). This preparation of the lining canvas would greatly weaken it, making it more like the original canvas.
+Upon closer observation of paintings in the collection, I deduced that the lining canvas was stretched by attaching it to the strainer with sprigs or brads. The lining would then be wetted to slacken the canvas, which could then be made taut again with the same sprigs, which at this point would be hammered back and bent to secure the canvas ([fig. 34.4](#fig-34-4)). This preparation of the lining canvas would greatly weaken it, making it more like the original canvas.
+
+{% figure 'fig-34-4' %}
 
 I use the term *system* for lining with glue paste, rather than referring to it simply as an adhesive, because the recipe in itself, with all its variants, does not cover the description of the process involved and its effects. In the Roman system, the original canvas is simply attached to the pretensioned lining canvas which, when impregnated with the glue, acquires a certain rigidity. This entails the transfer of the tensions of the original canvas onto the lining canvas, which therefore truly acts as a new support for the work.[^8] This is the main difference between the Roman and the Florentine systems, as they are still practiced today.[^9] As a rule, the lining canvas should be chosen to be as similar to the original as possible in terms of weight and weave count,[^10] but preferably finer and thinner. Canvases of the same period that have never been lined have the same characteristics.[^11]
 
@@ -84,25 +92,35 @@ The introduction of heat, generally termed *stiratura* (ironing), is documented 
 
 The reference to irons in relation to the *stiratura* is clearly made in Crespi’s 1756 letter to Algarotti, in a passage in which he relates what seems to be a consolidation procedure from the reverse. In this passage, Crespi expressly refers to the irons used for starching; therefore, it really is the same irons used in laundering that are meant ([[Bottari 1822–25]]).
 
-At this juncture during the lining procedure, after the ironing, the original tacking edges were turned over the strainer (but often they were included in the front surface, thus slightly enlarging the dimensions of the picture) and then secured with nails or glue. The old method is easily distinguishable in that the sprigs used to stretch the lining canvas are visible under the painted canvas edges (see [**fig. 34.4**](fig-34-4)).
+At this juncture during the lining procedure, after the ironing, the original tacking edges were turned over the strainer (but often they were included in the front surface, thus slightly enlarging the dimensions of the picture) and then secured with nails or glue. The old method is easily distinguishable in that the sprigs used to stretch the lining canvas are visible under the painted canvas edges (see [fig. 34.4](#fig-34-4)).
 
-The entire procedure described is observable in the *Adoration of the Shepherds*, by Cesari (inventory 1120) ([**fig. 34.5**](fig-34-5)). The work is part of the Torlonia bequest (one of the cores of the museum collection) and was acquired by the Torlonia from the Soderini family.
+The entire procedure described is observable in the *Adoration of the Shepherds*, by Cesari (inventory 1120) ([fig. 34.5](#fig-34-5)). The work is part of the Torlonia bequest (one of the cores of the museum collection) and was acquired by the Torlonia from the Soderini family.
+
+{% figure 'fig-34-5' %}
 
 The Soderini were one of the main patrons of Marco Benefial, a painter who always worked with Domenico Michelini, who was the most important restorer in Rome in the first half of the eighteenth century.[^12] We can therefore infer that Michelini also worked for the Soderini, and we can attribute this lining to him.
 
-It is interesting to observe that in the eighteenth century there were famous “duo” collaborations between restorers and painters, in which the restorer could not paint at all and would carry out the lining, the filling, and sometimes the cleaning,[^13] while the painter would retouch.[^14] Such famous duos include D. Michelini and M. Benefial, and later G. Principe and P. Anesi or D. Corvi.[^15] (See [Cerasuolo’s paper](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/35-Merucci/paper-5) in these proceedings for more on this division of labor.)
+It is interesting to observe that in the eighteenth century there were famous “duo” collaborations between restorers and painters, in which the restorer could not paint at all and would carry out the lining, the filling, and sometimes the cleaning,[^13] while the painter would retouch.[^14] Such famous duos include D. Michelini and M. Benefial, and later G. Principe and P. Anesi or D. Corvi.[^15] (See [Cerasuolo’s paper](/1-history/5/) in these proceedings for more on this division of labor.)
 
 Documents show the restorer Giovanni Principe, heir and son-in-law of Michelini, working in the same environment where Giovanni Torlonia had his business. Therefore, it is easy to imagine that they had business interests in common. However, many of the linings that have been preserved bear the Torlonia seal, which dates from the time when the inventory of the collection was drawn up, at the very beginning of the nineteenth century.
 
 ## The Seventeenth Century
 
-To conclude our survey going back in time, the oldest dated lining in the Barberini Galleries dates to the middle of the seventeenth century. The presence of the seal on the strainer dates its assembly, and therefore the lining of the painting, to 1641–1642. The strainer is of chestnut with shouldered bridle joints that are not blocked, and a fine, regularly woven, plain-weave lining canvas, in every way comparable to a contemporary canvas that has never been lined ([**fig. 34.6**](fig-34-6)).
+To conclude our survey going back in time, the oldest dated lining in the Barberini Galleries dates to the middle of the seventeenth century. The presence of the seal on the strainer dates its assembly, and therefore the lining of the painting, to 1641–1642. The strainer is of chestnut with shouldered bridle joints that are not blocked, and a fine, regularly woven, plain-weave lining canvas, in every way comparable to a contemporary canvas that has never been lined ([fig. 34.6](#fig-34-6)).
+
+{% figure 'fig-34-6' %}
 
 ## Conclusion
 
-Among the paintings in our Gallery, we have many works lined with wax resin, a system that spread during the 1960s, perhaps in pursuit of an ideal of modernity. If we compare two *pendants* by Benefial, one lined with the wax-resin system (inventory 1182) ([**fig. 34.7**](fig-34-7)) and the other lined with glue-paste (inventory 1183) ([**fig. 34.8**](fig-34-8)), the difference demonstrates how the wax-resin system has a far greater impact on the perception of the painting. The different saturation of the colors caused the original link between the two paintings to be lost. Therefore, it is essential to consider all the effects of the conservation method used to preserve a painting.
+Among the paintings in our Gallery, we have many works lined with wax resin, a system that spread during the 1960s, perhaps in pursuit of an ideal of modernity. If we compare two *pendants* by Benefial, one lined with the wax-resin system (inventory 1182) ([fig. 34.7](#fig-34-7)) and the other lined with glue-paste (inventory 1183) ([fig. 34.8](#fig-34-8)), the difference demonstrates how the wax-resin system has a far greater impact on the perception of the painting. The different saturation of the colors caused the original link between the two paintings to be lost. Therefore, it is essential to consider all the effects of the conservation method used to preserve a painting.
 
-Seeking to implement a minimal structural intervention respectful of the aesthetic qualities of the works in our collection, our studio is focusing on developing thread by thread mending techniques for tears, as for Maratti’s *Portrait of* *Cardinal Barberini* (inventory 5001), as well as on a program of preventive conservation. This is also what led us to study again the ancient lining systems with glue paste, which are still effective after centuries, sustainable from an environmental point of view, and an almost unique example of a completely reversible intervention, as for instance in the *bozzetto* for the *Vision of Saint Romualdo* ([**fig. 34.9**](fig-34-9)) by Sacchi (inventory 4632), which has been delined.
+Seeking to implement a minimal structural intervention respectful of the aesthetic qualities of the works in our collection, our studio is focusing on developing thread by thread mending techniques for tears, as for Maratti’s *Portrait of* *Cardinal Barberini* (inventory 5001), as well as on a program of preventive conservation. This is also what led us to study again the ancient lining systems with glue paste, which are still effective after centuries, sustainable from an environmental point of view, and an almost unique example of a completely reversible intervention, as for instance in the *bozzetto* for the *Vision of Saint Romualdo* ([fig. 34.9](#fig-34-9)) by Sacchi (inventory 4632), which has been delined.
+
+{% figure 'fig-34-7' %}
+
+{% figure 'fig-34-8' %}
+
+{% figure 'fig-34-9' %}
 
 {% backmatter %}
 
