--- a/content/6-interventions/36.md
+++ b/content/6-interventions/36.md
@@ -22,13 +22,17 @@ abstract: "Remedial conservation aims to arrest the ongoing deterioration proces
 
 In November 2017, the Government Museum of Rajasthan approached Indira Gandhi National Centre for the Arts (IGNCA) about the documentation and conservation of its collection in the Government Museum Alwar. This museum was established in 1940 in the city palace of Alwar and is spread over three halls. However, the collection of museums is displayed in four galleries. The first gallery contains sculptures and inscriptions; the second gallery contains musical instruments, a natural history collection, and decorative items. The third gallery houses the unique collection of canvas paintings and manuscripts, and the fourth gallery is dedicated to arms and armor.
 
-Alwar (a former principality) is a prominent city in the state of Rajasthan and is popularly known as the gateway to Rajasthan. The city is situated 160 kilometers southeast of New Delhi, the capital of India, and is part of the National Capital Region. In ancient times this area was known as Matsya Mahajanpad; it is mentioned in the Buddhist text *Anguttar Nikay* a as being among sixteen *MahaJanpad*. Bairath (present Viratnagar) was the capital of Matsya Desh ([**fig. 36.1**](fig-36-1)).
+Alwar (a former principality) is a prominent city in the state of Rajasthan and is popularly known as the gateway to Rajasthan. The city is situated 160 kilometers southeast of New Delhi, the capital of India, and is part of the National Capital Region. In ancient times this area was known as Matsya Mahajanpad; it is mentioned in the Buddhist text *Anguttar Nikay* a as being among sixteen *MahaJanpad*. Bairath (present Viratnagar) was the capital of Matsya Desh ([fig. 36.1](#fig-36-1)).
+
+{% figure 'fig-36-1' %}
 
 The Alwar museum is known for its unique, varied collection; it houses around fourteen thousand objects, including textiles, miniatures, rare books, canvas paintings, wooden objects, furniture, a natural history collection, metalwork, arms and armor, decorative art, and terracotta and stone objects. The collection also has twenty-six canvas paintings; twenty-four were on display at the time of our work, while two were kept in storage.
 
 These paintings are excellent works made locally by artisans under the patronage of the Alwar maharajas. The founder of the kingdom didn’t have time to concentrate on arts and crafts, but his successors gave patronage to Dalchand, Baldev, and Saligram. Although Dalchand and Saligram came from Jaipur, they started the Alwar school of paintings in eighteenth century. This school was developed from Jaipur school of paintings and had a Mughal influence. Dalchand had worked in the Rajput style, and Baldev was expert in the Mughal school, so the amalgamation of these two styles gradually came to be known as Alwar school of paintings.
 
-Maharaja Viney Singh was the greatest art enthusiast in the Alwar royal family tree and was himself a painter, calligrapher, and binder. During his time, Aga Mirza Khan was also a great calligrapher. Similarly, Natha Khan Darvesh and Abdul Rehman were expert in making figures and designs at the border of paintings. The paintings displayed at the Alwar museum were made during the reign of Maharaja Viney Singh (1815–1857) and have great historical significance ([**fig. 36.2**](fig-36-2)).
+Maharaja Viney Singh was the greatest art enthusiast in the Alwar royal family tree and was himself a painter, calligrapher, and binder. During his time, Aga Mirza Khan was also a great calligrapher. Similarly, Natha Khan Darvesh and Abdul Rehman were expert in making figures and designs at the border of paintings. The paintings displayed at the Alwar museum were made during the reign of Maharaja Viney Singh (1815–1857) and have great historical significance ([fig. 36.2](#fig-36-2)).
+
+{% figure 'fig-36-2' %}
 
 The Museum is located in what was once the Maharaja’s palace, which was converted for the task. Three large halls on the upper floor are dedicated to the display of objects. The canvas paintings that are the subject of this paper are displayed in gallery 3. The building has had various problems that arose since it was repurposed into a museum. Weather extremes and the overall condition of the building did not provide a suitable environment for the collection. For example, broken glass in a large window let biological agents into the galleries, and those agents’ activity caused problems that were noticed on the paintings during the documentation. Gaps between the walls and paintings had provided habitat for bats and other pests, and as a result the paintings had suffered paint losses and the disintegration of canvas due to bat excreta and other biological activity. The museum also had problems with leaks, leading to dampness on walls. This resulted in fungal infestations on the paintings.
 
@@ -62,7 +66,9 @@ It is impossible to undertake a satisfactory and ethical treatment without a goo
 
 -   **Treatment/remedial conservation.** This is where satisfactory treatment is determined and applied based on the information derived from previous phases. In this phase it is vital to keep in mind the principles of minimum intervention, compatibility, and reversibility.
 
-Museum administration asked us to undertake the work only in the museum. We were assigned space in gallery 3, which was converted into a temporary in situ studio ([**fig. 36.3**](fig-36-3)). This was an open studio, where visitors were allowed to interact and ask questions about the ongoing activities. The museum collection is public property; therefore, it is the public’s right to know what is happening to these collections. Keeping this in mind, we entertained any interested visitors.
+Museum administration asked us to undertake the work only in the museum. We were assigned space in gallery 3, which was converted into a temporary in situ studio ([fig. 36.3](#fig-36-3)). This was an open studio, where visitors were allowed to interact and ask questions about the ongoing activities. The museum collection is public property; therefore, it is the public’s right to know what is happening to these collections. Keeping this in mind, we entertained any interested visitors.
+
+{% figure 'fig-36-3' %}
 
 In formulating our conservation plan, we carried out a thorough initial study to understand the reasons behind the problems and study the techniques and art-historical aspects of the paintings. Examinations done with visible, raking, transmitted, and ultraviolet light sources were used to retrieve information from the objects. Overpainted areas (hidden beneath the surface) were revealed with UV light and documented.
 
@@ -92,7 +98,11 @@ After finishing our detailed study, we decided on the following steps for treati
 
 ### Patch Mending
 
-Patches were found in abundance on almost all the paintings. Three phases of patch mending were found: one on the original support, one on the lining canvas, and sometimes a third patch on the patch applied to the lining canvas. The material of the patch was cotton, but in some cases electrical tape and paper were also used for mending purposes ([**fig. 36.4**](fig-36-4)), and these were applied without removing older patches. The mending itself caused problems in some paintings. The dimension of each patch was larger than the tear it addressed, and the density of cloth greater than that of the original canvas, causing these patches to be clearly visible on the image layer and leading to problems in the paint layer ([**fig. 36.5**](fig-36-5)).
+Patches were found in abundance on almost all the paintings. Three phases of patch mending were found: one on the original support, one on the lining canvas, and sometimes a third patch on the patch applied to the lining canvas. The material of the patch was cotton, but in some cases electrical tape and paper were also used for mending purposes ([fig. 36.4](#fig-36-4)), and these were applied without removing older patches. The mending itself caused problems in some paintings. The dimension of each patch was larger than the tear it addressed, and the density of cloth greater than that of the original canvas, causing these patches to be clearly visible on the image layer and leading to problems in the paint layer ([fig. 36.5](#fig-36-5)).
+
+{% figure 'fig-36-4' %}
+
+{% figure 'fig-36-5' %}
 
 Our approach involved first carefully removing all the patches and cleaning off the adhesive properly, using acetone. This was easy, as the used adhesive had become brittle and lost adhesion. Then a thin film of Beva 371 was laid onto fine muslin cloth; after drying this film was used for mending. Tears were aligned properly, and the film was then applied with the help of heat and pressure. The thickness of the applied film was less than that of the original canvas, so this treatment should not create any problems in the future. If the mend shows some irregularity, it can easily be removed without damaging original artwork.
 
@@ -120,7 +130,9 @@ The principle of minimum intervention was followed for the paintings in which th
 
 In some paintings the original canvas was folded over the stretcher. We decided to reveal the folded canvas in these cases, increasing the size of painting. However, the curator resisted this idea because it would create a discrepancy in museum documentation. We explained to the curator that for ethical reasons the original paint layer should be revealed. Finally, the new size was accepted by the museum, which justified its decision on the grounds that during the conservation treatment the original paint layer was revealed to have larger dimensions than those previously recorded.
 
-As mentioned, three paintings needed to be lined, as the original canvases were not in good enough condition to hold the image layer. A lack of equipment made lining on site difficult. Nonetheless, we lined the paintings on a makeshift suction table using vacuum pressure ([**fig. 36.6**](fig-36-6)). The adhesive used for lining was Beva 371. Lining was carried out in a vacuum envelope, and the heat was applied using an iron.
+As mentioned, three paintings needed to be lined, as the original canvases were not in good enough condition to hold the image layer. A lack of equipment made lining on site difficult. Nonetheless, we lined the paintings on a makeshift suction table using vacuum pressure ([fig. 36.6](#fig-36-6)). The adhesive used for lining was Beva 371. Lining was carried out in a vacuum envelope, and the heat was applied using an iron.
+
+{% figure 'fig-36-6' %}
 
 ## Cleaning
 
@@ -156,11 +168,15 @@ We considered a series of questions before starting the cleaning process. This e
 
 After assessing these questions and their consequences, the cleaning was carried out. After discussion with curator, it was decided to fully clean the paintings. The cleaning was done to address the dust and dirt and to remove yellowed/darkened varnish, overpaint, and other foreign material from the surface. Tests were carried out on small areas using solvents of increasing strength—starting with saliva and progressing through alcohol to ketones to a solution of aliphatic solvents and finally to a solution of aromatic solvents—to find a solvent that could remove the varnish/overpaint and other unwanted material from the surface without harming the original paint film. Once the solvent was determined, a cleaning safety margin test was carried out with selected solvent to ensure it would not affect the stability of the colors present in the painting.
 
-The aromatic solvents gave fantastic results, but the same result was achieved with polar solvents by increasing the reaction time. Hence, the varnish removal was done using acetone and isopropyl alcohol ([**fig. 36.7**](fig-36-7)).
+The aromatic solvents gave fantastic results, but the same result was achieved with polar solvents by increasing the reaction time. Hence, the varnish removal was done using acetone and isopropyl alcohol ([fig. 36.7](#fig-36-7)).
+
+{% figure 'fig-36-7' %}
 
 ## Consolidation
 
-The term *consolidation* is used to describe providing adhesion between loose layers of a painting that are separated from the ground. Generally, this is done to stabilize problems like flaking, cupping, powdering, and blisters. Consolidation can be executed from the back (maximum intervention) or on the front, only to affected areas (local application). Preference was given to local consolidation in line with the principle of minimum intervention. Beva 371 was applied on affected areas using a small brush and later settled with a hot spatula ([**fig. 36.8**](fig-36-8)).
+The term *consolidation* is used to describe providing adhesion between loose layers of a painting that are separated from the ground. Generally, this is done to stabilize problems like flaking, cupping, powdering, and blisters. Consolidation can be executed from the back (maximum intervention) or on the front, only to affected areas (local application). Preference was given to local consolidation in line with the principle of minimum intervention. Beva 371 was applied on affected areas using a small brush and later settled with a hot spatula ([fig. 36.8](#fig-36-8)).
+
+{% figure 'fig-36-8' %}
 
 ## Restretching
 
@@ -180,7 +196,9 @@ The retouching was carried out using pigment and Paraloid B72 as a medium. Befor
 
 After the remedial conservation the paintings were well stabilized and could once again be appreciated by visitors. The colors that had been hidden by dark varnish are now visible. The ongoing structural problems of the paintings have been stabilized, and there are no longer unstable areas that will lead to further deterioration.
 
-During this project, we also trained the museum staff, students, and conservation professionals of that region through workshops. The workshop titled Conservation and Documentation of Oil Paintings was conducted in collaboration with SRAL, in the Netherlands, under the leadership of Kate Seymour. The painting conservation project was completed in eighteen months’ time. In addition to the paintings, the museum got a new look through a complete renovation, and conservation of the entire collection was done as well, including documentation. The paintings we restored are now displayed in the same location and can be viewed in a far better state and appreciated newly ([**fig. 36.9**](fig-36-9)).
+During this project, we also trained the museum staff, students, and conservation professionals of that region through workshops. The workshop titled Conservation and Documentation of Oil Paintings was conducted in collaboration with SRAL, in the Netherlands, under the leadership of Kate Seymour. The painting conservation project was completed in eighteen months’ time. In addition to the paintings, the museum got a new look through a complete renovation, and conservation of the entire collection was done as well, including documentation. The paintings we restored are now displayed in the same location and can be viewed in a far better state and appreciated newly ([fig. 36.9](#fig-36-9)).
+
+{% figure 'fig-36-9' %}
 
 ## Acknowledgments
 
