Add images to 39

--- a/content/7-modern-contemporary/39.md
+++ b/content/7-modern-contemporary/39.md
@@ -25,7 +25,9 @@ In 2016, the Conservation Department at the Menil Collection began a long-antici
 
 That Braque sought variation in his final surfaces is effectively demonstrated by Favero, Mysak, and Khandekar in their technical study of twenty-one paintings from 1928 to 1944. Braque achieved a variety of textural effects by mixing sand, fine gravel, and quartz into his grounds or using combs and sculptors’ tools to scrape through wet paint ([[Favero, Mysak, and Khandekar 2013]]). He created more delicate variations of surface by mixing varnish or beeswax into the paint or by selectively varnishing certain passages. Richardson describes his practice of applying a varnish to certain passages, sometimes according to a viewer’s expectations of an object’s reflectance (as in his paintings of the 1920s and ’30s, where shiny objects such as a glass vase received a glossy finish while matte objects such as a lemon received nothing), or sometimes in deliberately playful ways that go against a viewer’s expectations by rendering inherently shiny objects matte ([[Richardson 2004\|, 533]]).
 
-In *Pitcher,* the cleaning revealed that Braque manipulated the final surface sheen with two black paints—one that is velvety matte and one that is glossy—to establish subtle contrasts across the surface.[^3] For instance, a fish featured in the foreground is almost entirely painted in matte black paint except for two small reveals around its eye and gills where Braque left underlying glossy paint in reserve, creating a shiny iris and gleaming gill line ([**fig. 39.1**](fig-39-1)).
+In *Pitcher,* the cleaning revealed that Braque manipulated the final surface sheen with two black paints—one that is velvety matte and one that is glossy—to establish subtle contrasts across the surface.[^3] For instance, a fish featured in the foreground is almost entirely painted in matte black paint except for two small reveals around its eye and gills where Braque left underlying glossy paint in reserve, creating a shiny iris and gleaming gill line ([fig. 39.1](#fig-39-1)).
+
+{% figure 'fig-39-1' %}
 
 In addition to creating variable gloss and matteness, Braque manipulated the texture of *Pitcher’s* surface. Fine sgraffito marks outline the lemons, and medium to wide gouges create detail in the background, indicating that Braque used a variety of tools to establish a variable surface with tactile characteristics. In certain passages, grooves unite with precise paint application, merging the textural and the visual: two gouges extend upward from a cherry in the foreground, revealing dark underlying paint and beginning its stem; after approximately 1 centimeter, a fine stroke of brown paint fills them in and completes the stem’s length.
 
@@ -91,13 +93,25 @@ Wax-resin residues were clearly visible on the back of the canvas after the firs
 
 ## Treatment Results and Discussion
 
-When considering the treatment results, there are a variety of aspects to consider, including the aesthetics of the pictorial layer, the planarity of the support, the appearance of the back of the canvas, the percentage of weight loss, and color change. The wax-resin extraction resulted in relatively subtle changes to the pictorial layer. The colors in the face of the painting were not significantly altered, but there was a clearly perceptible lightening of the ground visible on the tacking margins. The painting does not have areas of exposed ground within the design, as do many of Braque's pictures, so the impact of this brightening upon the overall color harmony of the composition is less noticeable than it would be if the ground was a defining element. There was no perceivable change to the painting’s varying sheens of matte and glossy black paints ([**fig. 39.2**](fig-39-2); compare to [**fig. 39.1**](fig-39-1)).
+When considering the treatment results, there are a variety of aspects to consider, including the aesthetics of the pictorial layer, the planarity of the support, the appearance of the back of the canvas, the percentage of weight loss, and color change. The wax-resin extraction resulted in relatively subtle changes to the pictorial layer. The colors in the face of the painting were not significantly altered, but there was a clearly perceptible lightening of the ground visible on the tacking margins. The painting does not have areas of exposed ground within the design, as do many of Braque's pictures, so the impact of this brightening upon the overall color harmony of the composition is less noticeable than it would be if the ground was a defining element. There was no perceivable change to the painting’s varying sheens of matte and glossy black paints ([fig. 39.2](#fig-39-2); compare to [fig. 39.1](#fig-39-1)).
 
-The planarity of the canvas is now visibly more congruent with the age of the paint layer, as it no longer has the rigid tautness it did before. Six horizontal cracks spanning the painting’s width are more prominent, resulting in subtle planar distortions that are visible in the final stretching ([**fig. 39.3**](fig-39-3)). These cracks likely relate to when it was rolled during Braque’s evacuation from Paris at the outset of World War II; their return make visible an aspect of the painting’s history that was previously masked by the lining’s flatness. In addition to evidencing history, this return of dimensionality restores a relationship between paint and support that is more in keeping with Braque’s governing thoughts about the artistic process. Favero et al. have eloquently summarized these using an example described by the artist: “For Braque, color was inextricably bound to material and texture: ‘Dip two white cloths, but of different material, into the same dye; their color will be different’” ([[Favero, Mysak, and Khandekar, 2013\|, 99]]).[^8] Restoring the pliancy of the linen that had formerly been restricted by the wax resin creates an interaction between color and support that was previously absent.
+{% figure 'fig-39-2' %}
 
-In addition to an improved clarity of weave, a number of previously invisible marks became apparent on the back of the canvas after the saturating effect of the wax resin was removed ([**figs. 39.4**](fig-39-4) and [**39.5**](fig-39-5)). There are areas where the ground has seeped through the canvas ([**fig. 39.6**](fig-39-6)), and several dark marks, some of which follow contours of an underlying figural composition.
+The planarity of the canvas is now visibly more congruent with the age of the paint layer, as it no longer has the rigid tautness it did before. Six horizontal cracks spanning the painting’s width are more prominent, resulting in subtle planar distortions that are visible in the final stretching ([fig. 39.3](#fig-39-3)). These cracks likely relate to when it was rolled during Braque’s evacuation from Paris at the outset of World War II; their return make visible an aspect of the painting’s history that was previously masked by the lining’s flatness. In addition to evidencing history, this return of dimensionality restores a relationship between paint and support that is more in keeping with Braque’s governing thoughts about the artistic process. Favero et al. have eloquently summarized these using an example described by the artist: “For Braque, color was inextricably bound to material and texture: ‘Dip two white cloths, but of different material, into the same dye; their color will be different’” ([[Favero, Mysak, and Khandekar, 2013\|, 99]]).[^8] Restoring the pliancy of the linen that had formerly been restricted by the wax resin creates an interaction between color and support that was previously absent.
 
-Several areas of lighter canvas appeared on the back, including six horizontal lines, corresponding with cracks on the front, and a few larger forms, coinciding with areas of thin paint application. It seems likely that these, and other intermittent light areas, are areas of blanched wax or wax resin left in the canvas interstices. Some of these light areas have fine white deposits; Fourier transform infrared (FTIR) analysis of a sample from one deposit closely matches the reference spectra for wax.[^9] Current analysis is inconclusive regarding the presence of a resin such as dammar, Ketone Resin N, or Zonarez B-85, which were common components in the Kecks’ wax-resin mixtures.[^10] Analysis of the white deposits with gas-chromatography mass-spectrometry is forthcoming. UV photos taken of the back of the canvas after wax-extraction show a faint fluorescence in these areas, suggesting the presence of wax or wax-resin residues ([**fig. 39.7**](fig-39-7)). The blanching may be related to the higher evaporation rate of solvents at an air interface, such as a comparatively open pathway of a crack versus a solid paint film ([[Hansen 1970]]).
+{% figure 'fig-39-3' %}
+
+In addition to an improved clarity of weave, a number of previously invisible marks became apparent on the back of the canvas after the saturating effect of the wax resin was removed ([figs. 39.4](#fig-39-4) and [39.5](#fig-39-5)). There are areas where the ground has seeped through the canvas ([fig. 39.6](#fig-39-6)), and several dark marks, some of which follow contours of an underlying figural composition.
+
+{% figure 'fig-39-4' %}
+
+{% figure 'fig-39-5' %}
+
+{% figure 'fig-39-6' %}
+
+Several areas of lighter canvas appeared on the back, including six horizontal lines, corresponding with cracks on the front, and a few larger forms, coinciding with areas of thin paint application. It seems likely that these, and other intermittent light areas, are areas of blanched wax or wax resin left in the canvas interstices. Some of these light areas have fine white deposits; Fourier transform infrared (FTIR) analysis of a sample from one deposit closely matches the reference spectra for wax.[^9] Current analysis is inconclusive regarding the presence of a resin such as dammar, Ketone Resin N, or Zonarez B-85, which were common components in the Kecks’ wax-resin mixtures.[^10] Analysis of the white deposits with gas-chromatography mass-spectrometry is forthcoming. UV photos taken of the back of the canvas after wax-extraction show a faint fluorescence in these areas, suggesting the presence of wax or wax-resin residues ([fig. 39.7](#fig-39-7)). The blanching may be related to the higher evaporation rate of solvents at an air interface, such as a comparatively open pathway of a crack versus a solid paint film ([[Hansen 1970]]).
+
+{% figure 'fig-39-7' %}
 
 UV photos were taken of all eight Evolon CR sheets used during treatment as a way of visualizing the wax-resin’s location after extraction. The sheets on the face showed almost no wax-resin absorption, save for residues on the tacking margins and turnover edges. The acting solvent layers show an even distribution of wax resin, as do the dry wicking layers placed underneath for the first half of the treatment rounds. The wicking layer that was placed underneath the acting solvent layer for the second half of the treatment rounds shows an uneven distribution and minimal absorption of wax resin. Comparison with the front of the painting indicates that the distribution of wax resin in the wicking layer corresponds to cracks and thin paint layers. As mentioned, the pattern of UV-fluorescent and blanched material suggests that these areas retained wax throughout each treatment round. It seems likely the wax resin was not removed entirely because a higher solvent evaporation rate inhibited sustained dissolution.
 
@@ -133,27 +147,27 @@ The authors thank Corina E. Rogge for her technical analysis and guidance, Adam 
 
 ## Appendix A: Materials and Suppliers
 
-DMF-0.65, hexamethyldisiloxane, a linear silicone solvent (not to be confused with dimethylformamide) that is completely volatile. Average viscosity 0.65 cst at 25°C. Shepard Bros., Inc.: [http://www.shepardbros.com/](about:blank)
+DMF-0.65, hexamethyldisiloxane, a linear silicone solvent (not to be confused with dimethylformamide) that is completely volatile. Average viscosity 0.65 cst at 25°C. Shepard Bros., Inc.: [http://www.shepardbros.com/](http://www.shepardbros.com/)
 
-CSF-4 octamethylcyclotetrasiloxane, cyclic silicone solvent that is completely volatile at flash point: 59°C, Shepard Bros., Inc.: [http://www.shepardbros.com/](about:blank)
+CSF-4 octamethylcyclotetrasiloxane, cyclic silicone solvent that is completely volatile at flash point: 59°C, Shepard Bros., Inc.: [http://www.shepardbros.com/](http://www.shepardbros.com/)
 
-Dartek F-101, cast nylon film (nylon 6,6). Distributor: TALAS: http://www.talasonline.com
+Dartek F-101, cast nylon film (nylon 6,6). Distributor: TALAS: [http://www.talasonline.com](http://www.talasonline.com)
 
 Digital Bench Toploading Balance (for lining canvas strips): APX-153, Apex Series Balances, Denver Instrument, (discontinued)
 
-Digital bench scale (for painting): CPWplus 35, Adam Equipment, <https://www.globalindustrial.com/p/adam-bench-weighing-scale-75lb>
+Digital bench scale (for painting): CPWplus 35, Adam Equipment, [https://www.globalindustrial.com/p/adam-bench-weighing-scale-75lb](https://www.globalindustrial.com/p/adam-bench-weighing-scale-75lb)
 
-Evolon CR, nonwoven fabric composed of polyester and nylon microfilaments, https://deffner-johann.de/en/evolonr-cr-on-roll-102-cm-x-10-m.html
+Evolon CR, nonwoven fabric composed of polyester and nylon microfilaments, [https://deffner-johann.de/en/evolonr-cr-on-roll-102-cm-x-10-m.html](https://deffner-johann.de/en/evolonr-cr-on-roll-102-cm-x-10-m.html)
 
-Hollytex, made from acid-free, fine, nonwoven, spun-bonded 100% polyester. Distributor: TALAS, 330 Morgan Avenue, Brooklyn, NY 11211. [http://www.talasonline.com](about:blank)
+Hollytex, made from acid-free, fine, nonwoven, spun-bonded 100% polyester. Distributor: TALAS, 330 Morgan Avenue, Brooklyn, NY 11211. [http://www.talasonline.com](http://www.talasonline.com)
 
 Infrared thermometer: Etekcity Lasergrip 774 Noncontact Digital Laser \\ Temperature Gun.
 
-ShellSol Odorless Mineral Spirits, distributed by Conservation Support Systems, Santa Barbara, CA. 800-482-6299. https://conservationsupportsystems.com/main
+ShellSol Odorless Mineral Spirits, distributed by Conservation Support Systems, Santa Barbara, CA. 800-482-6299. [https://conservationsupportsystems.com/main](https://conservationsupportsystems.com/main)
 
-Sigma Aldrich Xylenes, ≥98.5% xylenes, ethylbenzene basis. https://www.sigmaaldrich.com/US/en/product/sigald/247642
+Sigma Aldrich Xylenes, ≥98.5% xylenes, ethylbenzene basis. [https://www.sigmaaldrich.com/US/en/product/sigald/247642](https://www.sigmaaldrich.com/US/en/product/sigald/247642)
 
-Spectrophotometer: Konica Minolta CM 700d, 8 mm aperture, SCI (specular component included)/SCE (specular component excluded). https://sensing.konicaminolta.us/us/products/cm-700d-spectrophotometer/" https://sensing.konicaminolta.us/us/products/cm-700d-spectrophotometer/
+Spectrophotometer: Konica Minolta CM 700d, 8 mm aperture, SCI (specular component included)/SCE (specular component excluded). [https://sensing.konicaminolta.us/us/products/cm-700d-spectrophotometer/](https://sensing.konicaminolta.us/us/products/cm-700d-spectrophotometer/)
 
 ## Appendix B: Trial Procedure
 
