--- a/content/1-history/1.md
+++ b/content/1-history/1.md
@@ -29,25 +29,35 @@ During a period when lining was widely, uncritically accepted, most practitioner
 
 ## Scientific Research
 
-After Greenwich, it was clear that an understanding of the structure and mechanisms of stretched canvas paintings was needed. This has since been achieved by a number of researchers, beginning with Marion Mecklenburg and his systematic studies that provided measurements of painting materials under tension and in different RH conditions, identifying the high tension in glue films and grounds at low humidity. Measurements of breaking strains of oil paint films led to an explanation of the observed cracking of canvas paintings ([**fig. 1.1**](file:///Users/RBarth/Desktop/17100-Conserving-Canvas-S23-Quire-GCI/TRANSMITTAL/papers/fig-1-1)).
+After Greenwich, it was clear that an understanding of the structure and mechanisms of stretched canvas paintings was needed. This has since been achieved by a number of researchers, beginning with Marion Mecklenburg and his systematic studies that provided measurements of painting materials under tension and in different RH conditions, identifying the high tension in glue films and grounds at low humidity. Measurements of breaking strains of oil paint films led to an explanation of the observed cracking of canvas paintings ([fig. 1.1](#fig-1-1)).
+
+{% figure 'fig-1-1' %}
 
 The response of paintings to moisture had been a particular concern since the nineteenth century. Mecklenburg’s plot of tension against RH for all the materials on a stretched and primed canvas was a major advance ([[Mecklenburg 1982]]; [[Mecklenburg and Tumosa 1991a]]). Gerry Hedley explained the mechanism of canvas shrinking when exposed to water or RH approaching 100%. He also saw the effect of initial weave crimp transfer from warp to weft ([[Hedley 1993]]; [[Hedley and Odlyha 1993]]). The differing influence of pigments on the drying (curing) of linseed oil explained why the application of moisture and pressure is not enough to flatten most mature lead white paints. Temperature response of paintings was also investigated ([[Michalski 1991]]). Cracking of otherwise flexible acrylic paintings at extremely low temperatures was at first surprising. The concept of glass transition temperature (Tg) clarified why familiar flexible materials became brittle at these low temperatures.
 
-Long-term mechanical behavior, such as relaxation and creep, have also been measured, providing useful predictions of future behavior. It took sixteen years to collect the data shown in [**fig. 1.2**](file:///Users/RBarth/Desktop/17100-Conserving-Canvas-S23-Quire-GCI/TRANSMITTAL/papers/fig-1-2) at the Canadian Conservation Institute, which shows the relaxation (loss of tension) of stretched canvas paintings and linings over that period of time, plotted on a logarithmic time axis. Such data is critical when deciding on the best choice of adhesive and lining material.
+Long-term mechanical behavior, such as relaxation and creep, have also been measured, providing useful predictions of future behavior. It took sixteen years to collect the data shown in ([fig. 1.2](#fig-1-2)) at the Canadian Conservation Institute, which shows the relaxation (loss of tension) of stretched canvas paintings and linings over that period of time, plotted on a logarithmic time axis. Such data is critical when deciding on the best choice of adhesive and lining material.
 
-The use of biaxial stretching, first proposed by Berger ({Berger and Russell 2000}), and electronic speckle pattern interferometry (ESPI) for strain measurement ([**fig. 1.3**](file:///Users/RBarth/Desktop/17100-Conserving-Canvas-S23-Quire-GCI/TRANSMITTAL/papers/fig-1-3)) enabled Young and Hibberd to look in further detail at conservation issues and lining practice, such as the strain associated with stretcher attachments ([[Young and Hibberd 1999]]; [[Young and Hibberd 2000]]). The complex structure of stretched canvas is now understood in sufficient detail to consider computer modeling of the mechanical properties of both paintings and linings. It also offers the opportunity to study in more detail the effects of minimal treatments on more contemporary paintings ([[Hagan et al. 2007]]; [[Hagan et al. 2011]]). Temporary solutions and physical protection may prove to be our best options, but many have not yet been fully assessed objectively.
+{% figure 'fig-1-2' %}
+
+The use of biaxial stretching, first proposed by Berger ({Berger and Russell 2000}), and electronic speckle pattern interferometry (ESPI) for strain measurement ([fig. 1.3](#fig-1-3)) enabled Young and Hibberd to look in further detail at conservation issues and lining practice, such as the strain associated with stretcher attachments ([[Young and Hibberd 1999]]; [[Young and Hibberd 2000]]). The complex structure of stretched canvas is now understood in sufficient detail to consider computer modeling of the mechanical properties of both paintings and linings. It also offers the opportunity to study in more detail the effects of minimal treatments on more contemporary paintings ([[Hagan et al. 2007]]; [[Hagan et al. 2011]]). Temporary solutions and physical protection may prove to be our best options, but many have not yet been fully assessed objectively.
+
+{% figure 'fig-1-3' %}
 
 ## Conservation Practice
 
 Transferring research results into conservation practice on historic objects involves special problems. Understanding materials in a pristine state is not enough to predict the behavior of deteriorated old paintings ([[Ackroyd 2002]]; [[Hackney 2004b]]; [[Phenix 1995]]; [[Reeve 1984]]; [[Scharff 2012]]). Since an assessment of physical condition and appropriate treatment requires such knowledge, measuring slow processes, such as “natural” aging, is increasingly necessary in order to make reliable long-term decisions.
 
-Progress in devising and applying new conservation treatments is made difficult because at some stage practical experience can be gained only by working directly on unique and valuable original aged material ([**fig. 1.4**](file:///Users/RBarth/Desktop/17100-Conserving-Canvas-S23-Quire-GCI/TRANSMITTAL/papers/fig-1-4)). It might be argued that this amounts to carrying out scientific experiments lacking a control. As a consequence, we can choose our treatment method but cannot be sure it was the best of several possible options.
+Progress in devising and applying new conservation treatments is made difficult because at some stage practical experience can be gained only by working directly on unique and valuable original aged material ([fig. 1.4](#fig-1-4)). It might be argued that this amounts to carrying out scientific experiments lacking a control. As a consequence, we can choose our treatment method but cannot be sure it was the best of several possible options.
+
+{% figure 'fig-1-4' %}
 
 In the UK, original nineteenth-century loose linings have provided a limited source of acceptable experimental material, but such material has still not been replicated reliably in all its aspects by artificial aging methods.
 
 For the conservator concerned with historic paintings, it is important to be aware of artists’ changing methods, materials, and intentions. There is much detail, accumulated from the examination of examples of painting practice, to inform the conservator of the likely behavior of a specific painting to be treated. For the period from the latter part of the nineteenth century until the present, artists were less bound by academy controls; their aims became more adventurous, and their materials and methods expanded. As paintings from this period increasingly demand attention and treatment, the conservator is presented with a variety of interesting new problems and conflicts, many of which have already contributed to modified conservation practice for works on canvas, currently leading to a more preventive approach. The demands of much recently created art provide a challenge that requires radical solutions, and they are pointing to new directions in conservation of both contemporary and traditional art ([[Heiber 2003]]).
 
-Some developments of lining processes using new materials, such as sailcloth fabric ([[Hedley and Villers 1982]]) and Beva 371 adhesive ([[Berger 1975]]), have so far survived the test of time. Exploring the properties and stability of possible alternative conservation structural materials is a major undertaking, made more difficult by the risk that material manufacturers may discontinue their supply. Economics also conspire to deter time-consuming structural treatments. As a consequence, for many contemporary paintings, restoration often challenges existing experience and costs much more than preventing damage ([**fig. 1.5**](file:///Users/RBarth/Desktop/17100-Conserving-Canvas-S23-Quire-GCI/TRANSMITTAL/papers/fig-1-5)).
+Some developments of lining processes using new materials, such as sailcloth fabric ([[Hedley and Villers 1982]]) and Beva 371 adhesive ([[Berger 1975]]), have so far survived the test of time. Exploring the properties and stability of possible alternative conservation structural materials is a major undertaking, made more difficult by the risk that material manufacturers may discontinue their supply. Economics also conspire to deter time-consuming structural treatments. As a consequence, for many contemporary paintings, restoration often challenges existing experience and costs much more than preventing damage ([fig. 1.5](#fig-1-5)).
+
+{% figure 'fig-1-5' %}
 
 ## Collections Care
 
@@ -65,7 +75,9 @@ For the long-term survival of paintings, the less dramatic yet equally important
 
 The slow reactions of oxidation and hydrolysis that take place in degrading cellulose and oil paint are the main reasons that painting materials become fragile. What were originally stable structures no longer perform their design function, and physical damage often follows. Air pollution and light contribute to this deterioration, involving chemical interactions between canvas and its immediate environment. They play a subtle, perhaps unstoppable, role in aging.
 
-For the period between 1900 and 1960, air pollution was at its worst in many countries. Most museums were not air-conditioned, and until about 1990 concentrations of particulates and the strong acidic gas sulfur dioxide remained unacceptably high. In the last hundred years or so, exposed canvas has adsorbed sulfur dioxide from air pollution; the sulfur dioxide then reacts with the cellulose in the canvas. The products are not volatile and remain in the canvas, facilitating hydrolysis reactions. All acidity, whether from external and internal pollution or simply from oxidation, cause measurable weakening and embrittlement of the canvas ([**fig. 1.6**](file:///Users/RBarth/Desktop/17100-Conserving-Canvas-S23-Quire-GCI/TRANSMITTAL/papers/fig-1-6)).
+For the period between 1900 and 1960, air pollution was at its worst in many countries. Most museums were not air-conditioned, and until about 1990 concentrations of particulates and the strong acidic gas sulfur dioxide remained unacceptably high. In the last hundred years or so, exposed canvas has adsorbed sulfur dioxide from air pollution; the sulfur dioxide then reacts with the cellulose in the canvas. The products are not volatile and remain in the canvas, facilitating hydrolysis reactions. All acidity, whether from external and internal pollution or simply from oxidation, cause measurable weakening and embrittlement of the canvas ([fig. 1.6](#fig-1-6)).
+
+{% figure 'fig-1-6' %}
 
 Efflorescence can occur on the surface of oil paintings, especially unvarnished ones, and sometimes, on glazed works, it is transferred onto the glass. This deposit has been analyzed as fatty acids ([[Williams 1989]]), and these fatty acids must have been released from the oil paint. The hydrolysis of oils is well known, and migration of its reaction products within dried oil paint films explains efflorescence.
 
@@ -77,7 +89,9 @@ The acidic nature of dried oil paint is the reason why artists do not paint dire
 
 Similarly, if we add a consolidating or lining adhesive that can become acidic on oxidation, the canvas will be exposed to more rapid deterioration. These arguments suggest more research is needed into both conservation adhesives and ways of achieving adequate deacidification of canvas ([[Hackney, Townsend, and Wyplosz 1996]]; [[Ryder 1986]]).
 
-Enclosure on display or in storage to reduce moisture exchange and deposition of external pollution, such as nitrogen dioxide and particulates, is an important conservation measure ([[McClure 2012]]) and a more sustainable alternative to air-conditioning, but measurements within enclosures demonstrate that we have to be careful in its use (**[fig. 1.7](file:///Users/RBarth/Desktop/17100-Conserving-Canvas-S23-Quire-GCI/TRANSMITTAL/papers/fig-1-7) a and b).**
+Enclosure on display or in storage to reduce moisture exchange and deposition of external pollution, such as nitrogen dioxide and particulates, is an important conservation measure ([[McClure 2012]]) and a more sustainable alternative to air-conditioning, but measurements within enclosures demonstrate that we have to be careful in its use ([fig. 1.7a and b](#fig-1-7))
+
+{% figure 'fig-1-7' %}
 
 The concentration in air is not in itself a measure of reaction rate, but it shows that more molecules are available to react. Below 0.5 AER (air exchange rate), the rate of off-gassing of acetic acid, both from the packaging and (some) from the object, exceeds the combined leakage rate and rate of deposition or reaction, the latter being slow processes. When reactive molecules collide, only a small proportion react, but in these circumstances trapped pollution molecules can collide many times and will eventually react. The introduction of sacrificial adsorbers or reactants might therefore be useful, provided they are placed close to the object.
 
